# tauri_template

./: LICENSE  package.json
scripts/: clean.sh  format.sh  test.sh
src/: App.tsx  styles.css
src-tauri/: .clippy.toml  .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  state.rs
src/components/Adder/: Adder.tsx  package.json
