[package]
name = "tauri_template"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tobias Rosskopf"]
license = "MIT"
repository = "https://www.github.com/tobiasrosskopf/tauri_template"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.0.1"
